<resources>
    <!-- Global -->
    <string name="app_name">Idli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Month</string>
    <string name="toggle_text">urgent:</string>

    <!-- Icons -->
    <string name="return_to_today">Today</string>
    <string name="title_activity_add_new_task">AddNewTaskActivity</string>
    <string name="title_activity_task_details">TaskDetailsActivity</string>
    <string name="start_date_button">Start</string>
    <string name="end_date_button">End</string>
    <string name="colors_button">color:</string>

    <!-- Task Details Activity -->
    <string name="task_details_return_description">Return to Homepage</string>
    <string name="task_details_edit_description">Edit this task</string>
    <string name="task_details_title">Title</string>
    <string name="task_details_dates">From Nov 1 to Nov 6</string>
    <string name="task_details_urgency">and it\'s urgent!</string>
    <string name="task_details_note">You can find the notes online in the resources section.</string>
</resources>
